--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "run-s build:posts build:next",
+    "build": "run-s build:posts build:sitemap build:next",
+    "build:sitemap": "next-sitemap",
     "build:posts": "ts-node --project tsconfig.builder.json ./src/builder/posts.ts",
     "build:next": "next build",
     "start": "next start"
@@ -26,6 +27,7 @@
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-react-hooks": "^4.1.2",
     "fs-extra": "^9.0.1",
+    "next-sitemap": "^1.6.116",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
     "rss-parser": "^3.9.0",
